--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,6 @@
+.env
 __pycache__/
 *.pyc
-*.pyo
-*.pyd
-venv/
-env/
-ENV/
-.env
-.env.*
-*.egg
-*.egg-info
-dist/
-build/
+
 *.log
-*.hypothesis/
-.pytest_cache/
-**/__pycache__/
-**/.__pycache__/
-**/.env
+*.sqlite3
